--- a/settings.css
+++ b/settings.css
@@ -424,6 +424,113 @@ input[type="radio"]#toggleBuyMarkersNeutral:checked ~ .slider {
 
 
 
+.automation-button {
+    position: relative;
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #a09f9f;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    overflow: hidden;
+    z-index: 1;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: background-color 0.3s ease;
+}
+
+.automation-button:hover {
+    background-color: #2c2c2c;  /* Slightly darker gray on hover */
+}
+
+.automation-button .square {
+    position: absolute;
+    width: 20px;  /* Square size */
+    height: 20px;
+    top: 50%;  /* Vertically center the squares */
+    transform: translateY(-50%);
+    animation: moveSquare 10s linear infinite;  /* Slower animation */
+    z-index: 0;  /* Ensure squares are behind the text */
+    opacity: 0.7;  /* Slight transparency for a subtle effect */
+}
+
+.automation-button .square:nth-child(1) {
+    background-color: #b58900;  /* Dull yellow */
+    left: -40px;
+    animation-delay: 0s;
+}
+
+.automation-button .square:nth-child(2) {
+    background-color: #cb4b16;  /* Dull red */
+    left: -40px;
+    animation-delay: 1s;  /* Reduced delay */
+}
+
+.automation-button .square:nth-child(3) {
+    background-color: #2aa198;  /* Dull teal */
+    left: -40px;
+    animation-delay: 2s;  /* Reduced delay */
+}
+
+.automation-button .square:nth-child(4) {
+    background-color: #268bd2;  /* Dull blue */
+    left: -40px;
+    animation-delay: 3s;  /* Reduced delay */
+}
+
+.automation-button .square:nth-child(5) {
+    background-color: #d33682;  /* Dull pink */
+    left: -40px;
+    animation-delay: 4s;  /* Reduced delay */
+}
+
+.automation-button .square:nth-child(6) {
+    background-color: #859900;  /* Dull green */
+    left: -40px;
+    animation-delay: 5s;
+}
+
+.automation-button .square:nth-child(7) {
+    background-color: #6c71c4;  /* Dull purple */
+    left: -40px;
+    animation-delay: 6s;
+}
+
+.automation-button .square:nth-child(8) {
+    background-color: #dd5856;  /* Dull crimson */
+    left: -40px;
+    animation-delay: 7s;
+}
+
+.automation-button .square:nth-child(9) {
+    background-color: #2aa198;  /* Dull turquoise */
+    left: -40px;
+    animation-delay: 8s;
+}
+
+.automation-button .square:nth-child(10) {
+    background-color: #101111;  /* Dull turquoise */
+    left: -40px;
+    animation-delay: 9s;
+}
+
+@keyframes moveSquare {
+    0% {
+        transform: translateX(-100%) translateY(-50%);  /* Start off-screen */
+    }
+    100% {
+        transform: translateX(1200px) translateY(-50%);  /* Move across the button and reset */
+    }
+}
+
+
+
+
+
+
 /* Import File Input */
 #importFileInput {
     display: none;
