--- a/styles.css
+++ b/styles.css
@@ -1033,3 +1033,10 @@ input:checked + .slider:before {
     color: #721c24;
     border-color: #f5c6cb;
 }
+
+#gameArea {
+    background-color: #333; /* Darker background */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow for depth */
+    z-index: 3;
+}
